# PythonProjectsFromBeginnerToAdvancedNotes

./: .gitignore  README.md  a.txt  passwords.txt  pyproject.toml
.github/agents/: dataverse-python-quickstart.prompt.md
FromBeginnerToAdvanced/10_turtle_racing/: 10_turtle_racing.py  README.md
FromBeginnerToAdvanced/11_tutorial/: 11_tutorial.py  11_tutorial_v2.py  README.md
FromBeginnerToAdvanced/12_alarm_clock/: 12_alarm_clock.py  README.md  sunflower-street-drumloop-85bpm-163900.mp3Zone.Identifier
FromBeginnerToAdvanced/13_password_generator/: 13_password_generator.py  README.md
FromBeginnerToAdvanced/14_shortest_path_finder/: 14_shortest_path_finder.py  14_shortest_path_finder_list.py  14_shortest_path_finder_set.py  README.md  benchmark_set_vs_list.py
FromBeginnerToAdvanced/15_nba_scores/: 15_nba_scores.py  15_nba_scores_2.py  README.md
FromBeginnerToAdvanced/16_currency_converter/: 16_currency_converter.py  README.md
FromBeginnerToAdvanced/17_youTube_video_downloade/: 17_youTube_video_downloade_2.py  (+1 more)
PythonForAiFullBeginnerCourse/: hello.py
SkhAiHub/: otel_vs_logging_demo.py
TrainingFastapi/: 20251210.py  20251215.py  caesar_inheritance.py  caesar_interactive.py  cipher_machine.py  demo_dataclass.py  fastapi_annotated_demo.py  fastapi_best_practices.py  fastapi_cheatsheet.py  fastapi_dependency_guide.py  fastapi_dependency_guide_old.py  form_file_handler.py  main.py  main_20251209_v2_old.py  modular_app_demo.py
Tutorial/: 20251205.py  3.py  3_list_operations_demo.py  check_fonts.py  medical_report_sanitizer.py  tutorial.py  web_sanitizer.py
(+55 files in other folders)
